[tool.poetry]
name = "telemt-proxy-tool"
version = "0.1.0"
description = ""
authors = ["arsenyvolodko <arvolodko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
fastapi = "^0.112.2"
python-dotenv = "1.0.1"
uvicorn = "^0.30.6"
requests = "^2.32.3"
docker = "^7.1.0"
black = "^25.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
